code cleanup; remove a bunch of warnings